changed as per requirements

--- a/card.html
+++ b/card.html
@@ -10,13 +10,13 @@
 		<!-- your favorite animal's name goes here -->
 		<h3 class="head">Siberian Husky</h3>
 		<!-- your favorite animal's image goes here -->
-		<img src="3.jpg" alt="dog" class="aimg">
+		<img src="Husky.jpg" alt="dog" class="aimg">
 		<div class="main1">
 			<!-- your favorite animal's interesting fact goes here -->
 			<p class="fact">Husky can make a great exercise companion as long as the weather isn't too warm.</p>
-			<ul>
+			<ul class="list">
 				<!-- your favorite animal's list items go here -->
-				<li class="items"><span class="items1">Scientific Name</span>: Canis lupus familiaris</li>
+				<li class="items" list-style-type="none"><span class="items1">Scientific Name</span>: Canis lupus familiaris</li>
 				<li class="items"><span class="items1">Average Length</span>: 53 to 61 centimeters</li>
 				<li class="items"><span class="items1">Average Weight</span>: 45 to 60 kilogram</li>
 				<li class="items"><span class="items1">Average Lifespan</span>:12 to 15 years</li>
