--- a/project4.htm
+++ b/project4.htm
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <!-- saved from url=(0097)https://storage.googleapis.com/supplemental_media/udacityu/2730818600/bootstrap-prestructure.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html><head><meta charset="utf-8'>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="css/bootstrap.min.css">
-<script src="js/bootstrap.min.js"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </head>
   <body>
     <div class="container">
-    <div class="row">
-      <div class="col-md-6"><img src="udacity-logo.jpg"></div>
+    <header class="row">
+      <div class="col-md-6"><img src="udacity-logo.jpg" alt="logo"></div>
       <div class="col-md-6 text-right text-uppercase"  >
         <h1 >ARSHPREET SINGH </h1>
         <h3 >Front-end Ninja</h3>
       </div>
-    </div>
+    </header>
     <hr >
     <div class="row">
-      <div class="col-md-12">
-      <img src="http://placekitten.com/1140/350" class="img-responsive">
+      <div class="col-xs-12">
+      <img src="http://placekitten.com/1140/350" alt="main kitten" class="img-responsive">
 
     </div>
     </div>
 
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-xs-12">
       <h2>Featured Work</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-4">
-        <img src="http://placekitten.com/555/300" alt="kitten" class="img-responsive "
+      <div class="col-xs-4">
+        <img src="http://placekitten.com/555/300" alt="kitten 1" class="img-responsive "
         data-toggle="modal" data-target="#myModal">
         <h3>Kitty 1</h3>
         <p><a href="http://github.com/">Link to project</a></p>
       </div>
-      <div class="col-md-4">
-        <img src="http://placekitten.com/555/300" class="img-responsive">
+      <div class="col-xs-4">
+        <img src="http://placekitten.com/555/300" alt="kitten 2" class="img-responsive" data-toggle="modal"
+        data-target="#myModal1">
         <h3>Kitty 2</h3>
         <p><a href="http://github.com/">Link to project</a></p>
       </div>
 
-      <div class="col-md-4">
-        <img src="http://placekitten.com/555/300" class="img-responsive">
+      <div class="col-xs-4">
+        <img src="http://placekitten.com/555/300" alt="kitten 3" class="img-responsive" data-toggle="modal"
+        data-target="#myModal3">
         <h3>Kitty 3</h3>
         <p><a href="http://github.com/">Link to project</a></p>
       </div>
@@ -54,17 +58,56 @@
        <!-- Modal content-->
        <div class="modal-content">
          <div class="modal-header">
-           <button type="button" class="close" data-dismiss="modal">&times;</button>
-           <h4 class="modal-title">Modal Header</h4>
+
+           <h4 class="modal-title">kitty 1</h4>
          </div>
+           <img src="http://placekitten.com/555/300" alt="kitty 1">
          <div class="modal-body">
-           <p>Some text in the modal.</p>
+           <p>this is kitty one.</p>
          </div>
          <div class="modal-footer">
            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
          </div>
        </div>
+     </div>
+   </div>
+   <!-- Modal -->
+  <div class="modal fade" id="myModal1" role="dialog">
+    <div class="modal-dialog">
 
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+
+          <h4 class="modal-title">kitty 2</h4>
+        </div>
+        <img src="http://placekitten.com/555/300" alt="kitty 2">
+        <div class="modal-body">
+          <p>this is kitty two.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+    <!-- Modal -->
+   <div class="modal fade" id="myModal3" role="dialog">
+     <div class="modal-dialog">
+
+       <!-- Modal content-->
+       <div class="modal-content">
+         <div class="modal-header">
+
+           <h4 class="modal-title">kitty 3</h4>
+         </div>
+           <img src="http://placekitten.com/555/300" alt="kitty 3">
+         <div class="modal-body">
+           <p>this is kitty three.</p>
+         </div>
+         <div class="modal-footer">
+           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+         </div>
+       </div>
      </div>
    </div>
   </div>
