--- a/project4.htm
+++ b/project4.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head><meta charset="utf-8'>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -15,7 +15,9 @@
         <h3 >Front-end Ninja</h3>
       </div>
     </header>
-    <hr >
+    <div class="row">
+    <hr>
+    </div>
     <div class="row">
       <div class="col-xs-12">
       <img src="http://placekitten.com/1140/350" alt="main kitten" class="img-responsive">
